# byteordered

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: base.rs  lib.rs  wrap.rs
tests/: macro.rs
