[package]
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
categories = ["encoding", "parsing"]
description = "Reading and writing data in a byte order only known at run-time"
documentation = "https://docs.rs/byteorder-runtime"
keywords = ["byte", "endian", "big-endian", "little-endian", "binary"]
license = "MIT or Apache-2.0"
readme = "README.md"
name = "byteorder-runtime"
repository = "https://github.com/Enet4/byteorder-runtime"
version = "0.1.0"

[dependencies]
byteorder = "1.0.0"

[dev-dependencies]
rand = "0.5.4"

[features]
default = ["std"]
i128 = ["byteorder/i128"]
std = ["byteorder/std"]

[badges.travis-ci]
branch = "master"
repository = "Enet4/byteorder-runtime"
