[package]
name = "byteordered"
version = "0.3.1"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
categories = ["encoding", "parsing"]
description = "Abstraction for reading and writing data with implicit byte order awareness"
keywords = ["byte", "endian", "big-endian", "little-endian", "binary"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Enet4/byteordered"

[dependencies]
byteorder = "1.0.0"

[features]
i128 = ["byteorder/i128"]

[badges.travis-ci]
branch = "master"
repository = "Enet4/byteordered"

[package.metadata.docs.rs]
features = ["i128"]
